--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,6 +45,7 @@ h3{ width: 100%;
     margin-top: 100px;
 
 }
+
  p{  
     display: block;
     /* margin-block-start: 1em;
@@ -124,8 +125,8 @@ footer {
 }
 .image_me{
     background-color: whitesmoke;
-    width: 267px;
-    height: 312px;
+    width: 100%;
+    height: 1vh;
 }
 
 .series{
@@ -166,6 +167,7 @@ footer {
     border-radius: 20px;
     }
 
+
 .fondovideo{
     background-color: #323232;
     margin-top: 200px;
@@ -177,8 +179,8 @@ footer {
     justify-content: center; 
     justify-items: center; 
     
-
 }
+
 
 
 
