Agrego bootstrap a pagina de eventos

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -181,7 +181,24 @@ footer {
     
 }
 
+.cafe{
+    width: 200px;
+    height: 100px;
+    position: absolute;
+    animation-name: move;
+    animation-duration: 15s;
+    animation-iteration-count: infinite;
+}
 
+/*----------------------------------------------------------------------------- Keyframe---------------------------------------------------------- */
+@keyframes move {
+    from{
+        left: 0px;
+    }
+    to{
+        left: 100%;
+    }
+}
 
 
 /*----------------------------------------------------------------------------- Id---------------------------------------------------------- */
