cambios de estilos y scss

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -203,8 +203,12 @@ footer {
 
 /*----------------------------------------------------------------------------- Id---------------------------------------------------------- */
 
+
 #logo{ 
     border-radius: 100px;
+    width: 100%;
+    max-width: 700px;
+    box-shadow: #323232;
     }
 #menu{
     top:0;
