--- a/scss/style.css
+++ b/scss/style.css
@@ -169,12 +169,23 @@ footer {
   width: 200px;
   height: 100px;
   position: absolute;
-  animation-name: move;
-  animation-duration: 15s;
-  animation-iteration-count: infinite;
+  -webkit-animation-name: move;
+          animation-name: move;
+  -webkit-animation-duration: 15s;
+          animation-duration: 15s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
 }
 
 /*----------------------------------------------------------------------------- Keyframe---------------------------------------------------------- */
+@-webkit-keyframes move {
+  from {
+    left: 0px;
+  }
+  to {
+    left: 100%;
+  }
+}
 @keyframes move {
   from {
     left: 0px;
@@ -222,6 +233,4 @@ footer {
 #video {
   background-color: #323232;
   margin-left: 500px;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
