--- a/scss/style.scss
+++ b/scss/style.scss
@@ -48,10 +48,10 @@ h3{ width: 100%;
 
  p{  
     display: block;
-    /* margin-block-start: 1em;
+    margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
-    margin-inline-end: 0px; */
+    margin-inline-end: 0px; 
     font-family: 'Outfit', sans-serif;
     color: #d8c7c7;
     text-shadow: rgb(18, 16, 16) 1px 0px 1px;   
@@ -84,7 +84,8 @@ section{
     text-align: center;
 }
 
-footer {
+footer{
+    margin: 0;
     background-color: #e3d3d3;
     text-align: center;
     position: fixed;
@@ -133,30 +134,27 @@ footer {
     justify-content: center;
     align-items: center;
     overflow: hidden;
+
+    __art {
+        width: 267px;
+        height: 403px;
+        background-color: gainsboro;
+        border-radius: 11px;
+        margin: 10px;
+      }
 }
 
 .formulario{
     border: 2px solid rgb(64, 58, 57);
-    width: 100%;
+    width: 500px;
     height: 100%;
     background: linear-gradient(rgb(40, 38, 38), rgb(219, 219, 225));
-
+    align-items: center;
+    margin-left: 20px;
+    margin-bottom: 50px;
 }
 
-.formulario__forma{
-   margin-left: 500px;
-   margin-right: 500px;
-   margin-bottom: 70px;
 
-}
-
-.series__art{
-    width: 267px;
-    height: 403px;
-    background-color: gainsboro;
-    border-radius: 11px;
-    margin: 10px;
-} 
 
 .galeria__image{
     justify-content: center; 
@@ -223,22 +221,25 @@ footer {
     background-color: white;
     font-family: 'Kaushan Script', cursive;
     font-size: 20px;
-    overflow: hidden;
+    overflow: hidden; 
+
+    
+    ul{
+        margin: 0;
+        padding:0;
+        padding-right: 20px;
+    }
+    li{
+        text-align: center;
+        display: inline;
+        margin: 10px;
+      }
+
+  
 }
 
-#menu ul{
-    margin: 0;
-    padding:0;
-    padding-right: 20px;
-}
 
-#menu li{
-    text-align: center;
-    display: inline;
-    margin: 10px;
-}
-
-#video{
+.video{
+    align-items: center;
     background-color: #323232;
-    margin-left: 500px;
 }
