--- a/style/style.css
+++ b/style/style.css
@@ -38,10 +38,10 @@ h3 {
 
 p {
   display: block;
-  /* margin-block-start: 1em;
+  margin-block-start: 1em;
   margin-block-end: 1em;
   margin-inline-start: 0px;
-  margin-inline-end: 0px; */
+  margin-inline-end: 0px;
   font-family: "Outfit", sans-serif;
   color: #d8c7c7;
   text-shadow: rgb(18, 16, 16) 1px 0px 1px;
@@ -75,6 +75,7 @@ section {
 }
 
 footer {
+  margin: 0;
   background-color: #e3d3d3;
   text-align: center;
   position: fixed;
@@ -122,26 +123,22 @@ footer {
   align-items: center;
   overflow: hidden;
 }
-
-.formulario {
-  border: 2px solid rgb(64, 58, 57);
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(rgb(40, 38, 38), rgb(219, 219, 225));
-}
-
-.formulario__forma {
-  margin-left: 500px;
-  margin-right: 500px;
-  margin-bottom: 70px;
-}
-
-.series__art {
+.series __art {
   width: 267px;
   height: 403px;
   background-color: gainsboro;
   border-radius: 11px;
   margin: 10px;
+}
+
+.formulario {
+  border: 2px solid rgb(64, 58, 57);
+  width: 500px;
+  height: 100%;
+  background: linear-gradient(rgb(40, 38, 38), rgb(219, 219, 225));
+  align-items: center;
+  margin-left: 20px;
+  margin-bottom: 50px;
 }
 
 .galeria__image {
@@ -206,22 +203,20 @@ footer {
   font-size: 20px;
   overflow: hidden;
 }
-
 #menu ul {
   margin: 0;
   padding: 0;
   padding-right: 20px;
 }
-
 #menu li {
   text-align: center;
   display: inline;
   margin: 10px;
 }
 
-#video {
+.video {
+  align-items: center;
   background-color: #323232;
-  margin-left: 500px;
 }
 
 /*# sourceMappingURL=style.css.map */
