--- a/scss/style.scss
+++ b/scss/style.scss
@@ -145,12 +145,11 @@ footer{
 }
 
 .formulario{
+    justify-content: center;
     border: 2px solid rgb(64, 58, 57);
-    width: 500px;
+    width: 100%;
     height: 100%;
     background: linear-gradient(rgb(40, 38, 38), rgb(219, 219, 225));
-    align-items: center;
-    margin-left: 20px;
     margin-bottom: 50px;
 }
 
