--- a/scss/style.css
+++ b/scss/style.css
@@ -38,10 +38,14 @@ h3 {
 
 p {
   display: block;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
+  -webkit-margin-before: 1em;
+          margin-block-start: 1em;
+  -webkit-margin-after: 1em;
+          margin-block-end: 1em;
+  -webkit-margin-start: 0px;
+          margin-inline-start: 0px;
+  -webkit-margin-end: 0px;
+          margin-inline-end: 0px;
   font-family: "Outfit", sans-serif;
   color: #d8c7c7;
   text-shadow: rgb(18, 16, 16) 1px 0px 1px;
@@ -85,7 +89,17 @@ footer {
 }
 
 /* -------------------------------------------------------------Clases-------------------------------------------------------- */
+.logocontenedor {
+  background-color: whitesmoke;
+}
+
+@media (max-width: 768px) {
+  .logocontenedor {
+    background-color: #000000;
+  }
+}
 .fondo {
+  overflow: scroll;
   background-color: #1e1e1e;
   width: 100%;
   margin: 0;
@@ -127,6 +141,12 @@ footer {
   margin-bottom: 50px;
 }
 
+.contacto {
+  display: grid;
+  justify-content: center;
+  justify-items: center;
+}
+
 .galeria__image {
   justify-content: center;
   justify-items: center;
@@ -152,12 +172,23 @@ footer {
   width: 200px;
   height: 100px;
   position: absolute;
-  animation-name: move;
-  animation-duration: 15s;
-  animation-iteration-count: infinite;
+  -webkit-animation-name: move;
+          animation-name: move;
+  -webkit-animation-duration: 15s;
+          animation-duration: 15s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
 }
 
 /*----------------------------------------------------------------------------- Keyframe---------------------------------------------------------- */
+@-webkit-keyframes move {
+  from {
+    left: 0px;
+  }
+  to {
+    left: 100%;
+  }
+}
 @keyframes move {
   from {
     left: 0px;
@@ -174,6 +205,11 @@ footer {
   box-shadow: #323232;
 }
 
+@media (max-width: 768px) {
+  #logo {
+    background-color: #000000;
+  }
+}
 #menu {
   top: 0;
   margin: 0;
@@ -203,6 +239,4 @@ footer {
 .video {
   align-items: center;
   background-color: #323232;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
