--- a/style/style.css
+++ b/style/style.css
@@ -85,7 +85,17 @@ footer {
 }
 
 /* -------------------------------------------------------------Clases-------------------------------------------------------- */
+.logocontenedor {
+  background-color: whitesmoke;
+}
+
+@media (max-width: 768px) {
+  .logocontenedor {
+    background-color: #000000;
+  }
+}
 .fondo {
+  overflow: scroll;
   background-color: #1e1e1e;
   width: 100%;
   margin: 0;
@@ -125,6 +135,12 @@ footer {
   height: 100%;
   background: linear-gradient(rgb(40, 38, 38), rgb(219, 219, 225));
   margin-bottom: 50px;
+}
+
+.contacto {
+  display: grid;
+  justify-content: center;
+  justify-items: center;
 }
 
 .galeria__image {
@@ -174,6 +190,11 @@ footer {
   box-shadow: #323232;
 }
 
+@media (max-width: 768px) {
+  #logo {
+    background-color: #000000;
+  }
+}
 #menu {
   top: 0;
   margin: 0;
