--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,6 +21,16 @@ body{
 
 }
 
+h1{
+    height: 45.45px;
+    border: none;
+    font-family: 'Kaushan Script', cursive;
+    color: black;
+    font-size: 40px;
+    text-align: center;
+    justify-content: space-between;
+}
+
 h2{ width: 195px;
     height: 45.45px;
     background: #323232;
@@ -185,7 +195,7 @@ footer{
     height: 100px;
     position: absolute;
     animation-name: move;
-    animation-duration: 15s;
+    animation-duration: 10s;
     animation-iteration-count: infinite;
 }
 
@@ -250,4 +260,53 @@ footer{
 .video{
     align-items: center;
     background-color: #323232;
+}
+
+.shake {
+    font-size: 10rem;
+    margin: auto;
+    border-radius: 10%;
+}
+.shake:hover {
+    animation: agitar 0.5s;
+    animation-iteration-count: infinite;
+}
+.shake:hover {
+    animation: agitar 5s;
+    animation-iteration-count: infinite;
+}
+@keyframes agitar {
+    0% {
+        transform: translate(2px, 2px) rotate(0deg);
+    }
+    10% {
+        transform: translate(-1px, -2px) rotate(-1deg);
+    }
+    20% {
+        transform: translate(-3px, 0px) rotate(1deg);
+    }
+    30% {
+        transform: translate(3px, 2px) rotate(0deg);
+    }
+    40% {
+        transform: translate(1px, -1px) rotate(1deg);
+    }
+    50% {
+        transform: translate(-1px, 2px) rotate(-1deg);
+    }
+    60% {
+        transform: translate(-3px, 1px) rotate(0deg);
+    }
+    70% {
+        transform: translate(3px, 1px) rotate(-1deg);
+    }
+    80% {
+        transform: translate(-1px, 2px) rotate(-1deg);
+    }
+    90% {
+        transform: translate(-1px, 2px) rotate(-1deg);
+    }
+    100% {
+        transform: translate(1px, -2px) rotate(-1deg);
+    }
 }
