--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,8 +4,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;500;800&display=swap" rel="stylesheet');
 
 
-
-
+$sombratexto: text-shadow  rgb(18, 16, 16) 1px 0px 1px;   
+$colorprincipal:  #e3d3d3; 
+$colorsecundario: whitesmoke;
+$colorterciario: #323232;
+$colorp: #d8c7c7; 
 
 
 
@@ -16,7 +19,7 @@
 body{
     padding: 0;
     margin: 0;
-    background-color: whitesmoke;
+    background-color: $colorsecundario;
     font-family: 'Outfit', sans-serif;
 
 }
@@ -33,7 +36,7 @@ h1{
 
 h2{ width: 195px;
     height: 45.45px;
-    background: #323232;
+    background: $colorterciario;
     border: none;
     font-family: 'Kaushan Script', cursive;
     color: #F5F5F5;
@@ -46,7 +49,7 @@ h2{ width: 195px;
 
 h3{ width: 100%;
     height:30px;
-    background: #323232;
+    background: $colorterciario;
     margin-right: 100px;
     font-family: 'Kaushan Script', cursive;
     color: #F5F5F5;
@@ -63,20 +66,20 @@ h3{ width: 100%;
     margin-inline-start: 0px;
     margin-inline-end: 0px; 
     font-family: 'Outfit', sans-serif;
-    color: #d8c7c7;
-    text-shadow: rgb(18, 16, 16) 1px 0px 1px;   
+    color: $colorp;
+    text-shadow: $sombratexto;   
 }
     
 
 
 a {
     &:link, &:visited {
-      color: #323232;
+      color: $colorterciario;
       text-decoration: none;
     }
   
     &:hover {
-      color: #323232;
+      color: $colorterciario;
       text-decoration: underline;
     }
   }
@@ -94,7 +97,7 @@ section{
 
 footer{
     margin: 0;
-    background-color: #e3d3d3;
+    background-color: $colorprincipal;
     text-align: center;
     position: fixed;
     width: 100%;
@@ -106,7 +109,7 @@ footer{
 
 /* -------------------------------------------------------------Clases-------------------------------------------------------- */
 .logocontenedor{
-    background-color: whitesmoke;
+    background-color: $colorsecundario;
 }
     @media (max-width: 768px) 
     {
@@ -126,7 +129,7 @@ footer{
 .button{
     width: 195px;
     height: 45.45px;
-    background: #323232;
+    background: $colorterciario;
     border: none;
     font-family: 'Outfit', sans-serif;
     color: #F5F5F5;
@@ -138,12 +141,12 @@ footer{
 } 
 
  .image_lateral{
-    background-color: whitesmoke;
+    background-color: $colorsecundario;
     width: 500px;
     height: 300%; 
 }
 .image_me{
-    background-color: whitesmoke;
+    background-color: $colorsecundario;
     width: 100%;
     height: 1vh;
 }
@@ -176,7 +179,7 @@ footer{
 
 
 .fondovideo{
-    background-color: #323232;
+    background-color: $colorterciario;
     margin-top: 200px;
     }
 
@@ -215,7 +218,7 @@ footer{
     border-radius: 100px;
     width: 100%;
     max-width: 700px;
-    box-shadow: #323232;
+    box-shadow: $colorterciario;
   }
   
   @media (max-width: 768px) {
@@ -256,7 +259,7 @@ footer{
 
 .video{
     align-items: center;
-    background-color: #323232;
+    background-color: $colorterciario;
 }
 
 .shake {
